[PE] Detect fragment clip change

Bug: 854783
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I7ae7d241596f8eedce26ff43b2ee9ff584b911ff
Reviewed-on: https://chromium-review.googlesource.com/1123108
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572365}
Former-commit-id: 0e3be792c60251e6d90a6995b9f66460f61ea0ce