third_party/blink/renderer/core/paint/paint_property_tree_builder_test.h
@@ -40,6 +40,26 @@ class PaintPropertyTreeBuilderTest : public PaintControllerPaintTest {
 
   const ObjectPaintProperties* PaintPropertiesForElement(const char* name);
 
+  static unsigned NumFragments(const LayoutObject* obj) {
+    unsigned count = 0;
+    auto* fragment = &obj->FirstFragment();
+    while (fragment) {
+      count++;
+      fragment = fragment->NextFragment();
+    }
+    return count;
+  }
+
+  static const FragmentData& FragmentAt(const LayoutObject* obj,
+                                        unsigned count) {
+    auto* fragment = &obj->FirstFragment();
+    while (count > 0) {
+      count--;
+      fragment = fragment->NextFragment();
+    }
+    return *fragment;
+  }
+
  private:
   void SetUp() override;
 };
